# alg-lib

./: .clang_format  .gitignore  CMakeLists.txt  CMakeSettings.json  compile_commands.json
Include/: alg_lib.h  array_stack.h  circular_queue.h  constants.h  doubly_linked_list.h  singly_linked_list.h  sll_queue.h  sll_stack.h  vector.h
Scripts/: BuildAll.ps1  BuildLin.ps1  BuildWin.ps1  TestAll.ps1  TestLin.ps1  TestWin.ps1
Tests/: vector_iterators_tests.cc  vector_tests.cc
